--- a/SMC/rtmp.vcxproj
+++ b/SMC/rtmp.vcxproj
@@ -209,6 +209,8 @@ copy ..\COPYING $(OutDir)\licenses\rtmp.txt</Command>
     <PreBuildEvent>
       <Command>if exist $(OutDir)\include\librtmp (
 rd /s /q $(OutDir)\include\librtmp
+cd ../
+cd $(ProjectDir)
 )</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -248,6 +250,8 @@ copy ..\COPYING $(OutDir)\licenses\rtmp.txt</Command>
     <PreBuildEvent>
       <Command>if exist $(OutDir)\include\librtmp (
 rd /s /q $(OutDir)\include\librtmp
+cd ../
+cd $(ProjectDir)
 )</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -287,6 +291,8 @@ copy ..\COPYING $(OutDir)\licenses\rtmp.txt</Command>
     <PreBuildEvent>
       <Command>if exist $(OutDir)\include\librtmp (
 rd /s /q $(OutDir)\include\librtmp
+cd ../
+cd $(ProjectDir)
 )</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -326,6 +332,8 @@ copy ..\COPYING $(OutDir)\licenses\rtmp.txt</Command>
     <PreBuildEvent>
       <Command>if exist $(OutDir)\include\librtmp (
 rd /s /q $(OutDir)\include\librtmp
+cd ../
+cd $(ProjectDir)
 )</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -379,6 +387,8 @@ copy ..\COPYING $(OutDir)\licenses\rtmp.txt</Command>
     <PreBuildEvent>
       <Command>if exist $(OutDir)\include\librtmp (
 rd /s /q $(OutDir)\include\librtmp
+cd ../
+cd $(ProjectDir)
 )</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -432,6 +442,8 @@ copy ..\COPYING $(OutDir)\licenses\rtmp.txt</Command>
     <PreBuildEvent>
       <Command>if exist $(OutDir)\include\librtmp (
 rd /s /q $(OutDir)\include\librtmp
+cd ../
+cd $(ProjectDir)
 )</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -483,6 +495,8 @@ copy ..\COPYING $(OutDir)\licenses\rtmp.txt</Command>
     <PreBuildEvent>
       <Command>if exist $(OutDir)\include\librtmp (
 rd /s /q $(OutDir)\include\librtmp
+cd ../
+cd $(ProjectDir)
 )</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -534,6 +548,8 @@ copy ..\COPYING $(OutDir)\licenses\rtmp.txt</Command>
     <PreBuildEvent>
       <Command>if exist $(OutDir)\include\librtmp (
 rd /s /q $(OutDir)\include\librtmp
+cd ../
+cd $(ProjectDir)
 )</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
